<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">_srgainey-R2</string>
	<string name="menu_settings">Settings</string>
	<string name="main_activity_title">Motivator Mapper</string>
	<string name="start_service_button_text">Start Background Service</string>
    <string name="stop_service_button_text">Stop Background Service</string>
	<string name="settings_button_text">Settings</string>

    <string name="stop_button_state">start_button_state</string>
    <string name="start_button_state">stop_button_state</string>


	<string name="alarm_service_started">Start Weather Service</string>
	<string name="alarm_service_finished">Start Weather Service</string>

	<string name="google_api_key">AIzaSyCQBT4HCyzFIwEgaItsjCKTRovII_E0wqU</string>
	<string name="darksky_api_key">7d0f47e0b42b30ddbe05872d55fb695a</string>
	<string name="maps_api_key">0Sb3tMN-RVrsvaYMZkOSx5iBHE5tyn8FFmqZGJQ</string>

	<string name="darksky_forecast_root">https://api.forecast.io/forecast</string>
	<string name="google_places_details_root">https://maps.googleapis.com/maps/api/place/radarsearch/json</string>
	<string name="google_places_radar_root">https://maps.googleapis.com/maps/api/place/radarsearch/json</string>
	<string name="google_places_nearby_root">https://maps.googleapis.com/maps/api/place/nearbysearch/json</string>

	<!-- inter-Service communication variables -->
	<string name="shared_preferences">srgainey-motivator</string>
	<string name="last_latitude_e6">last_latitude_e6</string>
	<string name="last_longitude_e6">last_longitude_e6</string>
	<string name="nice_weather">nice_weather</string>
	<string name="weather_reason">weather_reason</string>
	<string name="weather_json">weather_json</string>
	<string name="radar_json">radar_json</string>
	<string name="nearby_json">nearby_json</string>


    <string name="max_temperature">max_temperature</string>
    <string name="min_temperature">min_temperature</string>
    <string name="max_wind">max_wind</string>
    <string name="max_cloud_cover">max_cloud_cover</string>
    <string name="min_visibility">min_visibility</string>
    <string name="max_precip_probability">max_precip_probability</string>

	<string name="default_max_temperature">80</string>
	<string name="default_min_temperature">79</string>
	<string name="default_max_wind">20</string>
	<string name="default_max_cloud_cover">.50</string>
	<string name="default_min_visibility">5</string>
	<string name="default_max_precip_probability">.4</string>

    <string name="json_debug_length">50</string>    


	<string name="preferences_from_xml">Preference/1. Preferences from XML</string>
	<string name="launching_preferences">Preference/2. Launching preferences</string>
	<string name="preference_dependencies">Preference/3. Preference dependencies</string>
	<string name="default_values">Preference/4. Default values</string>
	<string name="preferences_from_code">Preference/5. Preferences from code</string>
	<string name="advanced_preferences">Preference/6. Advanced preferences</string>
	<string name="fragment_preferences">Preference/7. Fragment</string>
	<string name="preference_with_headers">Preference/8. Headers</string>

	<string name="launch_preference_activity">Launch PreferenceActivity</string>
	<string name="counter_value_is">The counter value is</string>

	<string name="inline_preferences">In-line preferences</string>
	<string name="dialog_based_preferences">Dialog-based preferences</string>
	<string name="launch_preferences">Launch preferences</string>
	<string name="preference_attributes">Preference attributes</string>

	<string name="title_checkbox_preference">Checkbox preference</string>
	<string name="summary_checkbox_preference">This is a checkbox</string>

	<string name="title_switch_preference">Switch preference</string>
	<string name="summary_switch_preference">This is a switch</string>
	<string name="summary_switch_preference_yes_no">This is a switch with custom text</string>

	<string name="title_yesno_preference">Yes or no preference</string>
	<string name="summary_yesno_preference">An example that uses a yes/no dialog</string>
	<string name="dialog_title_yesno_preference">Do you like bananas?</string>

	<string name="title_edittext_preference">Edit text preference</string>
	<string name="summary_edittext_preference">An example that uses an edit text dialog</string>
	<string name="dialog_title_edittext_preference">Enter your favorite animal</string>

	<string name="title_list_preference">List preference</string>
	<string name="summary_list_preference">An example that uses a list dialog</string>
	<string name="dialog_title_list_preference">Choose one</string>

	<string name="title_screen_preference">Screen preference</string>
	<string name="summary_screen_preference">Shows another screen of preferences</string>

	<string name="title_fragment_preference">Fragment preference</string>
	<string name="summary_fragment_preference">Shows another fragment of preferences</string>

	<string name="title_next_screen_toggle_preference">Toggle preference</string>
	<string name="summary_next_screen_toggle_preference">Preference that is on the next screen but same hierarchy</string>

	<string name="title_intent_preference">Intent preference</string>
	<string name="summary_intent_preference">Launches an Activity from an Intent</string>

	<string name="title_my_preference">My preference</string>
	<string name="summary_my_preference">This is a custom counter preference</string>

	<string name="title_advanced_toggle_preference">Haunted preference</string>
	<string name="summary_on_advanced_toggle_preference">I\'m on! :)</string>
	<string name="summary_off_advanced_toggle_preference">I\'m off! :(</string>

	<string name="title_parent_preference">Parent checkbox preference</string>
	<string name="summary_parent_preference">This is visually a parent</string>
	<string name="title_child_preference">Child checkbox preference</string>
	<string name="summary_child_preference">This is visually a child</string>

	<string name="example_preference_dependency">Example preference dependency</string>
	<string name="title_wifi">WiFi</string>
	<string name="title_wifi_settings">WiFi settings</string>

	<string name="default_value_list_preference">beta</string>
	<string name="default_value_edittext_preference">Default value</string>
</resources>