<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="Settings">

	<!-- InputTypes: http://developer.android.com/reference/android/widget/TextView.html#attr_android:inputType -->
	    
	<PreferenceCategory android:title="Weather Thresholds">
		<EditTextPreference android:title="Maximum Temperature (Fahrenheit)"
			android:inputType="number" 
			android:key="@string/max_temperature"
			android:summary="" 
			android:persistent="true"
			android:defaultValue="@string/default_max_temperature">
		</EditTextPreference>
		<EditTextPreference android:title="Minimum Temperature (Fahrenheit)"
			android:inputType="number" 
			android:key="@string/min_temperature"
            android:summary=""
			android:persistent="true" 
			android:defaultValue="@string/default_min_temperature">
		</EditTextPreference>
		<EditTextPreference android:title="Max Wind Speed (mile/hour)"
            android:inputType="number" 
            android:key="@string/max_wind"
            android:persistent="true" 
            android:defaultValue="@string/default_max_wind">
        </EditTextPreference>
		<EditTextPreference android:title="Max Cloud Cover (0.00-1.00)"
            android:inputType="number" 
            android:key="@string/max_cloud_cover"
            android:persistent="true" 
            android:defaultValue="@string/default_max_cloud_cover">
        </EditTextPreference>
		<EditTextPreference android:title="Minimum Visibility (miles)"
            android:inputType="number" 
            android:key="@string/min_visibility"
            android:persistent="true" 
            android:defaultValue="@string/default_min_visibility">
        </EditTextPreference>
		<EditTextPreference android:title="Maximum Precipitation Probability (0.00-1.00)"
            android:inputType="number" 
            android:key="@string/max_precip_probability"
            android:persistent="true" 
            android:defaultValue="@string/default_max_precip_probability">
        </EditTextPreference>
	</PreferenceCategory>
</PreferenceScreen>
